# ApplyLens

./: .e2e-config.txt  .env.ci.template  .gitignore  .gitleaks.toml  .lychee.toml  .markdownlint.json  .markdownlint.jsonc  .pre-commit-config.yaml  ACTIONS_IMPLEMENTATION.md  AGENT_V2_FRONTEND_INTEGRATION.md  API_RESTART_SUMMARY.md  AUTH_CHECK_LOOP_FIX.md  AUTO_DRAFT_DEPLOYMENT_SUMMARY.md  BACKEND_ISSUE.md  BROWSER_CACHE_FIX.md  BUGFIX_HEALTHBADGE_2025_10_22.md  BUILD_METADATA.md  CEO_WALKTHROUGH.md  CHANGELOG.md  CHANGELOG_v0.4.44.md  CHANGELOG_v0.4.45.md  CHANGELOG_v0.4.46.md  CHANGELOG_v0.4.47e.md  CHANGELOG_v0.4.48.md  CI_INTEGRATION_mailboxAssistant.md  CLOUDFLARE_TUNNEL_530_FIX.md  CLOUDFLARE_TUNNEL_ACTIVE.md  CLOUDFLARE_TUNNEL_QUICKSTART.md  CLOUDFLARE_TUNNEL_SETUP.md  CSRF_403_FIX.md  CSRF_FIX_SUMMARY.md  CSRF_FIX_v0.4.27.md  CUTOVER_RUNBOOK_V31.md  CUTOVER_SUMMARY_V31.md  DELIVERY_COMPLETE.md  DEMO_TRANSCRIPT_v0.4.47e.md  DEPENDENCIES_DOWN_ALERT_FIX.md  DEPLOY-QUICK-REF.md  DEPLOYMENT.md  DEPLOYMENT_2025_10_22.md  (+204 more)
services/api/: .pre-commit-config.yaml  APPROVALS_IMPLEMENTATION.md  APPROVALS_QUICKREF.md  Dockerfile  Dockerfile.prod  MIGRATION_STATUS.md  Makefile  NEXT_STEPS.md  PHASE_1.5_COMPLETE.md  PHASE_2.0_READY.md  PHASE_2.1_SUMMARY.md  PHASE_5.2_COMPLETE_SUMMARY.md  PHASE_5.2_IMPLEMENTATION.md  PHASE_5.2_METRICS_GUIDE.md  PHASE_5_4_5_EXTENSION_COMPLETE.md  PHASE_5_4_5_QUICKSTART.md  PHASE_5_4_BANDIT_IMPLEMENTATION.md  PHASE_5_COMPLETE.md  PHASE_5_TEST_IMPLEMENTATION.md  QUICK_START.md  README.md  SECURITY_INTEGRATION.md  STYLE_PREFS_IMPLEMENTATION.md  TEST_RESUME_LLM_INTEGRATION.md  agent_v2_intent_samples.json  alembic.ini  check_routes.ps1  check_sample.py  check_user_id_values.py  check_users.py  coverage.lcov  create_extension_tables.py  deploy_phase5.ps1  diagnose.ps1  fix_all_user_id.py  fix_user_id.py  manual_phase52_migration.sql  openapi-debug.json  pyproject.toml  pytest.ini  (+25 more)
services/api/alembic/: env.py
services/api/app/: auth_google.py  autofill_aggregator.py  config.py  config_env.py  db.py  email_extractor.py  email_parsing.py  es.py  gmail.py  gmail_providers.py  gmail_service.py  health.py  llm_provider.py  logging.yaml  main.py  metrics.py  metrics_agent.py  migrate.py  models.py  models_al.py  models_incident.py  models_learning.py  models_learning_db.py  models_policy.py  models_runtime.py  oauth_google.py  routes_agent_feedback.py  routes_applications.py  routes_applications.py.backup  routes_e2e_auth.py  routes_extract.py  routes_gmail.py  routes_threads.py  scheduler.py  schemas.py  schemas_agent.py  schemas_agent_feedback.py  schemas_approvals.py  settings.py  tracing.py
services/api/dashboards/: analytics-overview.ndjson  automation-risk.json  ops-overview.json
services/api/docs/: ADVANCED_FEATURES_SUMMARY.md  API_DESIGN_GUIDELINES.md  API_REFERENCE.md  APPROVALS_GROUPING_UI.md  BUDGETS_AND_GATES.md  CLASSIFICATION_VERIFICATION.md  CSRF_AND_M2M_AUTH.md  DASHBOARD_ALERTS.md  DBT_CLASSIFICATION_MODELS.md  EMAIL_CLASSIFICATION_STATUS.md  ES_ILM_RETENTION.md  ES_INTEGRATION_QUICKREF.md  ES_INTEGRATION_SUMMARY.md  ES_RBAC_API_KEYS.md  EVAL_GUIDE.md  GATE_BRIDGES.md  GRAFANA_DASHBOARD_SETUP.md  HEALTH_CHECKS.md  INTELLIGENCE_REPORT.md  INTERVENTIONS_GUIDE.md  LOCAL_ML_DEMO.md  LOCAL_ML_DEMO_SUMMARY.md  MIGRATION_EMAIL_AUTOMATION_COMPLETE.md  ML_TRAINING_EVALUATION_PLAN.md  NEXT_STEPS_COMPLETE.md  PHASE4_IMPLEMENTATION_SUMMARY.md  PHASE_12.2_PLAN.md  PLAYBOOKS.md  REDTEAM.md  RUNBOOK_ML_V1_FIRST_TRAINING.md  RUNBOOK_SEVERITY.md  TESTING_GUIDE.md  phase_5_4_progress.md
services/api/grafana/: README.md  (+1 more)
(+1958 files in other folders)
