[project]
name = "applylens-api"
version = "0.1.0"
description = "ApplyLens FastAPI backend"
requires-python = ">=3.10"
dependencies = [
  "fastapi",
  "uvicorn[standard]",
  "pydantic-settings",
  "SQLAlchemy>=2.0",
  "psycopg2-binary",
  "alembic",
  "python-multipart",
  "orjson",
  "elasticsearch>=8.12,<9",
  "httpx",
  "google-auth",
  "google-auth-oauthlib",
  "google-api-python-client",
  "pdfminer.six",
  "beautifulsoup4",
  "bleach",
  "python-dateutil",
  "python-slugify",
  "starlette-exporter",
  "prometheus-client",
]

[project.optional-dependencies]
test = [
  "pytest>=7.4",
  "pytest-asyncio>=0.21",
  "pytest-cov>=4.1",
  "freezegun>=1.2",
  "requests>=2.31",
]

[tool.uvicorn]
factory = true

[tool.setuptools]
py-modules = []
